GNOME Bugzilla – Bug 645713
dash does not come up
Last modified: 2013-08-15 01:52:31 UTC
Created attachment 184267 [details] overview screenshot JS ERROR: !!! Exception was: TypeError: this.icon is null JS ERROR: !!! lineNumber = '133' JS ERROR: !!! fileName = '/usr/share/gnome-shell/js/ui/iconGrid.js' JS ERROR: !!! stack = '(64)@/usr/share/gnome-shell/js/ui/iconGrid.js:133 (64)@/usr/share/gnome-shell/js/ui/iconGrid.js:121 ([object _private_Shell_App])@/usr/share/gnome-shell/js/ui/dash.js:397 ()@/usr/share/gnome-shell/js/ui/dash.js:540 ()@/usr/share/gjs-1.0/lang.js:110 _runDeferredWork("2")@/usr/share/gnome-shell/js/ui/main.js:820 _runAllDeferredWork()@/usr/share/gnome-shell/js/ui/main.js:829 ()@/usr/share/gnome-shell/js/ui/main.js:910 ' JS ERROR: !!! message = 'this.icon is null' JS ERROR: !!! Exception was: TypeError: this.icon is null JS ERROR: !!! lineNumber = '133' JS ERROR: !!! fileName = '/usr/share/gnome-shell/js/ui/iconGrid.js' JS ERROR: !!! stack = '(64)@/usr/share/gnome-shell/js/ui/iconGrid.js:133 (64)@/usr/share/gnome-shell/js/ui/iconGrid.js:121 ([object _private_Shell_App])@/usr/share/gnome-shell/js/ui/dash.js:397 ()@/usr/share/gnome-shell/js/ui/dash.js:540 ()@/usr/share/gjs-1.0/lang.js:110 _runDeferredWork("2")@/usr/share/gnome-shell/js/ui/main.js:820 _runBeforeRedrawQueue()@/usr/share/gnome-shell/js/ui/main.js:835 ()@/usr/share/gnome-shell/js/ui/main.js:844 ' JS ERROR: !!! message = 'this.icon is null'
Maybe because gnome-settings-daemon is not started..
(In reply to comment #1) > Maybe because gnome-settings-daemon is not started.. Sounds possible - this error occurs if: - You have an app running with a desktop file but with no icon in its desktop file (or an icon that can't be found) - Your current icon theme has no icon for application-x-executable If gnome-settings-daemon isn't running, you will get the hicolor icon theme, which does't have this icon. And in fact has no standard icons - only icons installed by applications. So there's not much we can do to appear non-broken in this case, since there's really no icon we can count on.
It's minor since I know the cause. But I would expect gnome-shell to run (ugly maybe) even without gnome-settings-daemon. You know systems can be broken sometimes and it's no good if the main UI is gone with it.
Owen, we can put a version of application-x-executable in the gtk builtin icon theme, and you can load the icon with ALLOW_BUILTIN. That should guarantee that you always get _something_.
It happens in jhbuild enviroment on old systems (like Ubuntu 10.10) can be fixed by starting gnome-settings-daemon from jhbuild. But it will bring problem with keyboard (different characters appear on key press and random hangs on keyboard activity)
Allow gnome-shell to function without a full GNOME stack is not something I think we want to support; we don't support running without PolicyKit, DBus or GTK+. Why gnome-settings-daemon?