Use the web-browser icon from the GNOME icon theme

Instead of the low res version shipped internally.

https://bugzilla.gnome.org/show_bug.cgi?id=645713